--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -49,6 +49,33 @@ properly:
   The "make install" as root will just copy the files and set some nice sym
   links and desktop entries.
 
+
+1.3 Under Mac OS X:
+
+  You need the Apple Developer-tools, X11, gtk1.2:
+
+  Downloading packages and installing them properly can be a time consuming
+  task. Therefore there are various package manager. One of them is fink:
+  Download fink from
+  http://fink.sourceforge.net/download/index.php?phpLang=en; follow the
+  install instructions
+
+  Developer-tools: Are included on the original OSX installation-CDs, or
+  download at ADC (free registration required)
+  http://developer.apple.com/.
+
+  Apple X11: On a fresh system: choose "Customize" in the
+  install-dialogue, check "X11".
+  On an already installed system: download at
+  http://www.apple.com/downloads/macosx/apple/x11formacosx.html
+
+  In the Terminal, run
+  'sudo fink install gtk-pixbuf gtk+ gtk+-data gtk+-shlibs gtk-doc 1.2-13
+  gtkglarea'
+
+  The X11-Application is in /Applications/Utilities/X11.
+
+
 ================================================================================
 2. Installing FreePascal
 
@@ -115,6 +142,8 @@ properly:
 --------------------------------------------------------------------------------
 2.3 Installing FreePascal under BSD/manually:
 
+ Read 1.2 first.
+ 
  Effectively, you need:
 
  - a file with all sources, or two (fpc and lazarus)
@@ -167,17 +196,58 @@ properly:
   - BSDHIER=1 on all make commands forces BSD hierarchy conventions.
 
 
+--------------------------------------------------------------------------------
+2.4 Installing FPC on Mac OS X
+
+  Read 1.3 first.
+
+  Information:
+  http://www.freepascal.org/fpcmac.html#TargetDarwin
+
+  Download the latest Mac OS X dmg package.
+  Since fpc for Mac OS X is under heavy development, it s recommended to use
+  the latest fpc from cvs.
+
+  Open a terminal and type (without the []$)
+  
+  []$ bash
+  []$ export CVSROOT=:pserver:cvs@cvs.freepascal.org:/FPC/CVS
+  []$ cvs login
+
+  password is 'cvs' without the ''
+
+  []$ cvs -z3 co fpc
+
+  This will create a directory fpc, which can also be later used by the IDE.
+  
+  Compile fpc:
+  
+  []$ make clean all
+  
+  Install fpc
+  
+  []$ sudo make install
+  
+  This will install fpc in /usr/local/bin. The compiler is for example
+  /usr/local/bin/ppcppc. You can add the path to your /Users/username/.profile.
+
+
+  Hint:
+  To download/update the latest changes you can simply do
+
+  []$ cd /Users/username/fpc
+  []$ cvs -z3 update -dP
+
 
 ================================================================================
 3. Installing Lazarus
 
 --------------------------------------------------------------------------------
-3.1 Installing Lazarus under Linux/BSD:
+3.1 Installing Lazarus under Linux/BSD/MacOSX:
 
-  You can either install the rpms for lazarus, or follow these instructions.
   Because the whole lazarus stuff is installed into one directory, uninstall
   is very easy and you don't need to be root to install lazarus.
-  You can get zip files from the downloads section or you can download it
+  You can get tgz/zip files from the downloads section or you can download it
   directly via cvs.
   
   ToDo: more details about the tars.
@@ -221,7 +291,7 @@ properly:
       Environment -> Environment Options -> Files
 
     The 'FPC Source directory' should point to your fpc source directory. This
-    directory normally ends with /fpc/ or /fpcsrc/ (e.g. /usr/src/fpcsrc or
+    directory normally ends with /fpc/ or /fpcsrc/ (e.g. /usr/share/fpcsrc or
     /home/username/freepascal/fpc) and
     contains directories like 'compiler', 'docs', 'fcl', 'rtl' and 'packages'.
 
