--- a/lcl/languages/lcl.es.po
+++ b/lcl/languages/lcl.es.po
@@ -130,19 +130,19 @@ msgstr "Abortar"
 
 #: lclstrconsts:ifsvk_accept
 msgid "Accept"
-msgstr ""
+msgstr "Aceptar"
 
 #: lclstrconsts:rsallfiles
 msgid "All files (%s)|%s|%s"
-msgstr ""
+msgstr "Todos los archivos (%s)|%s|%s"
 
 #: lclstrconsts:ifsvk_apps
 msgid "application key"
-msgstr ""
+msgstr "clave de la aplicación"
 
 #: lclstrconsts:ifsvk_back
 msgid "Backspace"
-msgstr ""
+msgstr "Retroceso"
 
 #: lclstrconsts:rsblank
 msgid "Blank"
@@ -170,11 +170,11 @@ msgstr "El lienzo no permite dibujar"
 
 #: lclstrconsts:ifsvk_capital
 msgid "Capital"
-msgstr ""
+msgstr "Mayúscula"
 
 #: lclstrconsts:ifsvk_clear
 msgid "Clear"
-msgstr ""
+msgstr "Limpiar"
 
 #: lclstrconsts:rsmtconfirmation
 msgid "Confirmation"
@@ -182,11 +182,11 @@ msgstr "Confirmación"
 
 #: lclstrconsts:ifsvk_control
 msgid "Control"
-msgstr ""
+msgstr "Control"
 
 #: lclstrconsts:ifsvk_convert
 msgid "Convert"
-msgstr ""
+msgstr "Convertir"
 
 #: lclstrconsts:rscreatinggdbcatchableerror
 msgid "Creating gdb catchable error:"
@@ -198,7 +198,7 @@ msgstr "Personalizado"
 
 #: lclstrconsts:ifsvk_delete
 msgid "Delete"
-msgstr ""
+msgstr "Suprimir"
 
 #: lclstrconsts:rsfddirectorymustexist
 msgid "Directory must exist"
@@ -206,7 +206,7 @@ msgstr "Directorio debe de existir"
 
 #: lclstrconsts:ifsvk_down
 msgid "Down"
-msgstr ""
+msgstr "Abajo"
 
 #: lclstrconsts:sduplicatemenus
 msgid "Duplicate menus"
@@ -214,7 +214,7 @@ msgstr "Duplicar menús"
 
 #: lclstrconsts:ifsvk_end
 msgid "End"
-msgstr ""
+msgstr "Fin"
 
 #: lclstrconsts:rsmterror
 msgid "Error"
@@ -242,7 +242,7 @@ msgstr "Error:"
 
 #: lclstrconsts:ifsvk_escape
 msgid "Escape"
-msgstr ""
+msgstr "Escape"
 
 #: lclstrconsts:rsexception
 msgid "Exception"
@@ -250,7 +250,7 @@ msgstr "Excepción"
 
 #: lclstrconsts:ifsvk_execute
 msgid "Execute"
-msgstr ""
+msgstr "Ejecutar"
 
 #: lclstrconsts:rsfileinformation
 msgid "File information"
@@ -266,7 +266,7 @@ msgstr "Debe salir el archivo"
 
 #: lclstrconsts:ifsvk_final
 msgid "Final"
-msgstr ""
+msgstr "Final"
 
 #: lclstrconsts:rsfixedcolstoobig
 msgid "FixedCols can't be >= ColCount"
@@ -294,11 +294,11 @@ msgstr ""
 
 #: lclstrconsts:ifsvk_help
 msgid "Help"
-msgstr ""
+msgstr "Ayuda"
 
 #: lclstrconsts:ifsvk_home
 msgid "Home"
-msgstr ""
+msgstr "Inicio"
 
 #: lclstrconsts:rsindexoutofrange
 msgid "Index Out of range Cell[Col=%d Row=%d]"
@@ -310,7 +310,7 @@ msgstr "Información"
 
 #: lclstrconsts:ifsvk_insert
 msgid "Insert"
-msgstr ""
+msgstr "Insertar"
 
 #: lclstrconsts:sinvalidactioncreation
 msgid "Invalid action creation"
@@ -362,11 +362,11 @@ msgstr ""
 
 #: lclstrconsts:ifsvk_left
 msgid "Left"
-msgstr ""
+msgstr "Izquierdo"
 
 #: lclstrconsts:ifsvk_lwin
 msgid "left windows key"
-msgstr ""
+msgstr "Tecla izquierda de las ventanas"
 
 #: lclstrconsts:rslistindexexceedsbounds
 msgid "List index exceeds bounds (%d)"
@@ -378,7 +378,7 @@ msgstr "La lista debe estar vacía"
 
 #: lclstrconsts:ifsvk_menu
 msgid "Menu"
-msgstr ""
+msgstr "Menú"
 
 #: lclstrconsts:smenuindexerror
 msgid "Menu index out of range"
@@ -390,23 +390,23 @@ msgstr "MenuItem es nulo"
 
 #: lclstrconsts:ifsvk_modechange
 msgid "Mode Change"
-msgstr ""
+msgstr "Modo Cambio"
 
 #: lclstrconsts:ifsvk_lbutton
 msgid "Mouse Button Left"
-msgstr ""
+msgstr "Botón Izquierdo del Ratón"
 
 #: lclstrconsts:ifsvk_mbutton
 msgid "Mouse Button Middle"
-msgstr ""
+msgstr "Botón del Medio del Ratón"
 
 #: lclstrconsts:ifsvk_rbutton
 msgid "Mouse Button Right"
-msgstr ""
+msgstr "Botón Derecho del Ratón"
 
 #: lclstrconsts:ifsvk_next
 msgid "Next"
-msgstr ""
+msgstr "Siguiente"
 
 #: lclstrconsts:rsnointerfaceobject
 msgid "No interface object. Plz check if the unit \"interfaces\" was added to the programs uses clause."
@@ -414,7 +414,7 @@ msgstr "No hay interfaz para el objeto. Por favor compruebe si la unidad \"inter
 
 #: lclstrconsts:snomdiform
 msgid "No MDI form present."
-msgstr ""
+msgstr "No hay formulario MDI presente"
 
 #: lclstrconsts:snotimers
 msgid "No timers available"
@@ -426,7 +426,7 @@ msgstr "No a todo"
 
 #: lclstrconsts:ifsvk_nonconvert
 msgid "Nonconvert"
-msgstr ""
+msgstr "Sin convertir"
 
 #: lclstrconsts:rsnotavalidgridfile
 msgid "Not a valid grid file"
@@ -454,7 +454,7 @@ msgstr "La ruta debe existir"
 
 #: lclstrconsts:ifsvk_pause
 msgid "Pause key"
-msgstr ""
+msgstr "Tecla Pausa"
 
 #: lclstrconsts:rsdefaultfileinfovalue
 msgid "permissions user group size date time"
@@ -462,11 +462,11 @@ msgstr "permisos usuario grupo tamaño fecha hora"
 
 #: lclstrconsts:ifsvk_print
 msgid "Print"
-msgstr ""
+msgstr "Imprimir"
 
 #: lclstrconsts:ifsvk_prior
 msgid "Prior"
-msgstr ""
+msgstr "Prioridad"
 
 #: lclstrconsts:rspropertydoesnotexist
 msgid "Property %s does not exist"
@@ -478,15 +478,15 @@ msgstr "Recurso %s no encontrado"
 
 #: lclstrconsts:ifsvk_return
 msgid "Return"
-msgstr ""
+msgstr "Enter"
 
 #: lclstrconsts:ifsvk_right
 msgid "Right"
-msgstr ""
+msgstr "Derecha"
 
 #: lclstrconsts:ifsvk_rwin
 msgid "right windows key"
-msgstr ""
+msgstr "tecla derecha de las ventanas"
 
 #: lclstrconsts:rsfdfilesaveas
 msgid "Save file as"
@@ -502,7 +502,7 @@ msgstr "Propiedad ScrollBar fuera de rango"
 
 #: lclstrconsts:ifsvk_select
 msgid "Select"
-msgstr ""
+msgstr "Seleccionar"
 
 #: lclstrconsts:rspickdate
 msgid "Select a date"
@@ -526,11 +526,11 @@ msgstr ""
 
 #: lclstrconsts:ifsvk_snapshot
 msgid "Snapshot"
-msgstr ""
+msgstr "Capturar pantalla"
 
 #: lclstrconsts:ifsvk_space
 msgid "Space key"
-msgstr ""
+msgstr "Tecla espaciadora"
 
 #: lclstrconsts:smenunotfound
 msgid "Sub-menu is not in menu"
@@ -566,7 +566,7 @@ msgstr "No se ha podido cargar la fuente por defecto"
 
 #: lclstrconsts:ifsvk_unknown
 msgid "Unknown"
-msgstr ""
+msgstr "Desconocido"
 
 #: lclstrconsts:rsunknownpictureextension
 msgid "Unknown picture extension"
@@ -582,7 +582,7 @@ msgstr "Formato de portapapeles no soportado: %s"
 
 #: lclstrconsts:ifsvk_up
 msgid "Up"
-msgstr ""
+msgstr "Arriba"
 
 #: lclstrconsts:rsmtwarning
 msgid "Warning"
